--- a/gibs/resources/resources.qrc
+++ b/gibs/resources/resources.qrc
@@ -1,4 +1,6 @@
 <RCC>
     <qresource prefix="/">
+        <file>compilers/clang.json</file>
+        <file>compilers/g++.json</file>
     </qresource>
 </RCC>
