WIP: androiddeployqt support. Some command line options are still missing

--- a/gibs/resources/resources.qrc
+++ b/gibs/resources/resources.qrc
@@ -1,6 +1,8 @@
 <RCC>
     <qresource prefix="/">
+        <file>compilers/android-arm-gcc.json</file>
         <file>compilers/clang.json</file>
         <file>compilers/g++.json</file>
+        <file>deployers/androiddeployqt.json</file>
     </qresource>
 </RCC>
